[tool.poetry]
name = "prjfinancasstreamlit"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.38.0"
requests = "^2.32.3"
prophet = "^1.1.5"
yfinance = "^0.2.43"
pandas = "^2.2.2"
plotly = "^5.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
